--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
             <sonar.projectKey>mercanil_lottery-service</sonar.projectKey>
             <sonar.organization>mercanil</sonar.organization>
             <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+            <sonar.exclusions>**/entity/**/*.*, **/dto/**/*.*</sonar.exclusions>
+
     </properties>
     <dependencies>
         <dependency>
