artifactId changed from lottery to lottery-service

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mercan</groupId>
-    <artifactId>lottery</artifactId>
+    <artifactId>lottery-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>lottery</name>
     <description>Lottery Project</description>
